--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.14.2"
+  },
+  "type": "module"
 }
